tests/analyzer/fail/enum-backing-non-int.api
// expected: 1009, 1009

type s = opaque{};

type f1 = enum(f32) {a};
type f2 = enum(s) {a};